--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ footer{
       <li class="col nav-item active">
         <a class="nav-link" href="#">Price</a>
       </li>
-      
+       <li class="col nav-item active">
+        <a class="nav-link" href="#">company</a>
+      </li>
     </ul>
    </b>
     </div>
